09-TELEPORT/02-teleport-ingressroute-prod.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: teleport-cluster-web
  namespace: teleport
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      #match: Host(`teleport.med2engineering.dev`,`*.teleport.med2engineering.dev`)
      match: Host(`teleport.med2engineering.dev`)
      services:
        - name: teleport-cluster
          port: 443
  # Using wildcard TLS certificate
  #tls:
  #  secretName: mydomain-wildcard-cluster-cert-prod-tls
